package edu.sjsu.spring2026.group32.launcher.model;

/**
 * Programs launched from the central launcher.
 */
public enum LauncherProgram {
    BIDIRECTIONAL_TEST,
    HIT_THE_ZONE,
    PONG
}
